--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -15,5 +15,8 @@
     "chai": "^4.3.6",
     "ethers": "^5.7.0",
     "hardhat": "^2.10.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
